# dc-3d-modeler

./: README.md  requirements.txt
core_engine/: .gitignore  README.md  demo.py  gct_profile.py  pyproject.toml
core_engine/lingbot_map/aggregator/: __init__.py  base.py  stream.py
core_engine/lingbot_map/heads/: camera_head.py  dpt_head.py
core_engine/lingbot_map/layers/: __init__.py  attention.py  block.py  flashinfer_cache.py  rope.py  vision_transformer.py
core_engine/lingbot_map/models/: gct_base.py  gct_stream.py  gct_stream_window.py  gct_stream_window_v2.py
core_engine/lingbot_map/utils/: geometry.py  load_fn.py  pose_enc.py
core_engine/lingbot_map/vis/: __init__.py  glb_export.py  point_cloud_viewer.py  sky_segmentation.py  utils.py  viser_wrapper.py
datacenter_modeler/: README.md  annotation.py  calibration.py  cli.py  coordinates.py  core_engine_adapter.py  export_dxf.py  export_ifc.py  export_obj.py  geometry_utils.py  heat_load.py  import_scan.py  io.py  models.py  package_outputs.py  scale.py  validation.py
datacenter_modeler/examples/: sample_datacenter_layout.json
tests/: test_datacenter_modeler.py
tools/revit/: README_RVT_WORKFLOW.md  create_rvt_from_layout_README.md  create_rvt_from_layout_pseudocode.py
tools/windows/: convert_dxf_to_dwg.scr  convert_dxf_to_dwg_README.md
